@@ -1,3 +1,10 @@
+2009-03-10 Borut Razem <borut.razem AT siol.net>
+
+	* src/mcs51/gen.c, src/z80/gen.c, src/hc08/gen.c, src/ds390/gen.c,
+	  support/regression/tests/bug1875933.c:
+	  fixed bug #1875933: Evelyn jumps into the void
+	  thanks to Robert Larice
+
 2009-03-10 Raphael Neider <rneider AT web.de>
 
 	* src/pic16/pcode.c (LinkFlow): fix invalid cast from pCodeLabel
